# kinect-openni

./: CMakeLists.txt  DeterminePosition.h  Location.h  README.md  dectect_object.cpp  dectect_object_bak.cpp  main.py  openni_grabber.cpp
